crates/serpen/tests/snapshots/test_bundling_snapshots__execution_results@simple_math.snap
---
source: crates/serpen/tests/test_bundling_snapshots.rs
expression: execution_results
---
Status: SUCCESS
Stdout:
Addition: 8
Multiplication: 28
Stderr:
