crates/serpen/tests/snapshots/test_bundling_snapshots__ruff_lint_results@future_imports_basic.snap
---
source: crates/serpen/tests/test_bundling_snapshots.rs
---
RuffLintResults {
    f401_violations: [],
    f404_violations: [],
    other_violations: [],
    total_violations: 0,
}
